--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ html, body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    cursor:none;
 }
 
 canvas {
@@ -14,3 +13,6 @@ canvas {
     background-color: black;
 }
 
+.noCursor {
+    cursor:none;
+}
